# xdg-desktop-portal-lxqt

./: .gitignore  CMakeLists.txt  Makefile  README.md
data/: CMakeLists.txt  lxqt-portals.conf  org.freedesktop.impl.portal.desktop.lxqt.service.in
src/: CMakeLists.txt  desktopportal.cpp  desktopportal.h  filechooser.cpp  filechooser.h  main.cpp  utils.cpp  utils.h
